feat:Add get ../files support (#65)
