# trs_filer/api/additions.openapi.yaml
@@ -548,32 +548,25 @@ components:
             Other values MAY be used, as long as implementors are aware of the issues discussed in https://tools.ietf.org/html/rfc6920#section-9.4[RFC6920].
 
             GA4GH may provide more explicit guidance for use of non-IANA-registered algorithms in the future.
-    OtherType:
-      type: string
-      description: Additional file type available for describing `type` in
-        `FilesRegister`object.
-      enum:
-        - JSON
-        - OTHER
     TypeRegister:
       type: string
       description: Type of file. For descriptor files (`PRIMARY_DESCRIPTOR`
-        and `SECONDARY_DESCRIPTOR`), the allowed file types are
-        enumerated in the `DescriptorType` schema. For container recipe files
-        (`CONTAINERFILE`), the allowed file types are enumerated in the
-        `ImageType` schema. For these files, providing this property is required.
-        For test files (`TEST_FILE`) and other files (`OTHER`), only `JSON` and
-        `OTHER` (described by `AdditionalType`) are allowed as values for this
-        property. For these files, providing the value can be omitted and will be
-        set automatically by the implementation.
+        and `SECONDARY_DESCRIPTOR`), test files (`TEST_FILE`) and other files
+        (`OTHER`), the allowed file types are enumerated in the
+        `DescriptorType` schema. For container recipe files (`CONTAINERFILE`),
+        the allowed file types are enumerated in the
+        `ImageType` schema.
       anyOf:
         - $ref: '#/components/schemas/DescriptorType'
         - $ref: '#/components/schemas/ImageType'
-        - $ref: '#/components/schemas/OtherType'
-      example: OTHER
+      example: CWL
     FilesRegister:
       type: object
       description: Properties and (a pointer to the) contents of a file.
+      required:
+        - tool_file
+        - file_wrapper
+        - type
       additionalProperties: false
       properties:
         tool_file:
@@ -775,6 +768,9 @@ components:
     ToolFileRegister:
       type: object
       additionalProperties: false
+      required:
+        - path
+        - file_type
       properties:
         path:
           type: string
